# vision

./: .gitignore  README.md  ai-clinical.html  align.py  analytics.html  book.html  build.py  china-ai.html  dir.html  index-content.html  index-zh.html  index.html  index.mdx  lessons-zh.html  lessons.html  manifest-zh.json  manifest.json  maye.html  pyproject.toml  release.py  research-zh.html  research.html  slides.html  sw-zh.js  sw.js  tts.py  vault-zh.html  vault.html
back-matter/: about-author.mdx  acknowledgments.mdx  glossary.mdx  verification.mdx  whats-next.mdx
ch01-the-shift/: 01-historical-pattern.mdx  02-ai-is-different.mdx  03-the-asymmetry.mdx  index.mdx
ch02-the-problem/: 01-cloud-ai-trap.mdx  02-workflow-gap.mdx  03-hardware-crossover.mdx  04-accountability-void.mdx  index.mdx
ch03-sovereignty/: 01-what-sovereignty-means.mdx  02-regulatory-tide.mdx  03-geopolitical-reality.mdx  04-the-apple-model.mdx  index.mdx
ch04-the-platform/: 01-architecture-philosophy.mdx  02-sovereign-compute-fabric.mdx  03-agent-workbench.mdx  04-workflow-engine.mdx  05-what-makes-it-different.mdx  index.mdx
ch05-workflows/: 01-beyond-chatbots.mdx  02-domain-expertise-as-ip.mdx  03-the-science-of-work.mdx  04-human-in-the-loop.mdx  05-dogfooding.mdx  index.mdx
ch06-the-marketplace/: 01-workflows-as-assets.mdx  02-marketplace-economics.mdx  03-from-consulting-to-product.mdx  04-data-center-vertical.mdx  index.mdx
ch07-the-protocols/: 01-why-a-protocol.mdx  02-aep-receipts.mdx  03-aep-footnotes.mdx  04-aep-ndas.mdx  05-acp-compute.mdx  index.mdx
docs/: audio.md  (+1 more)
(+80 files in other folders)
